Feature #696 - Import into data model (named tables with relationships)
- Added the CreateExcelTable method (an alternative to the CreateExcelTable method found on the ExcelUtilities class) to create an Excel ListObject that is bound to the current MySqlDataTable instance and that contains a Workbook connection so its data can be refreshed using the standard Excel Refresh command. Split the code in the ImportDataAtGivenExcelCell into 2 new methods: ImportDataIntoExcelRange and ImportDataIntoExcelTable. (source/Classes/MySqlDataTable.cs)
- Enhanced the MySqlListView class (former MyTreeView) to allow multiple selection of nodes using the mouse + keyboard modifier keys (like SHIFT and CTRL) and to flag related DbObject instances as selected. Header nodes are explicitly treated as such compared to the old way in which the level of the node dictated which ones were the headers. (source/Controls/MySqlListView.cs)
- Modified code in the panels consuming the MySqlListView class to accomodate for its enhancements. (source/Panels/DbObjectSelectionPanel.cs, source/Panels/DbObjectSelectionPanel.resx, source/Panels/SchemaSelectionPanel.cs, source/Panels/SchemaSelectionPanel.resx, source/Panels/WelcomePanel.cs, source/Panels/WelcomePanel.resx)
- Created the ImportMultipleDialog form to show users which tables and views were selected in the DbObjectSelectionPanel and to let them pick related tables or views and import relationships. (source/Forms/ImportMultipleDialog.cs, source/Forms/ImportMultipleDialog.Designer.cs, source/Forms/ImportMultipleDialog.resx)
- Modified code in the DbObjectSelectionPanel class to add new HotLabel objects enabled when multiple tables or views are selected, also validated that whenever procedures are included in the multiple selection only the procedure is actually selected since procedures are not allowed in a multiple database object selection. Added code (in the ImportMultiHotLabel_Click method) to import the data in each database object included i

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.3.0
+- Added new feature to allow the selection of multiple tables and views and an Import Multiple Tables and Views action that when clicked imports the data of all selected
+  database objects into individual Excel worksheets, Excel tables are created optionally for each imported Table or View. On Excel 2013 (and higher) PowerPivot model
+  relationships are created based on MySQL relationships defined with foreign key constraints.
+
 1.2.1
 - Fixed a bug that happened after closing an Excel window containing an open MySQL for Excel add-in in Excel 2013, the custom task pane linked to the closed window was
   not being disposed of correctly and not removed from the collection of Excel task panes either.
