Workitem #697 - Storing connection information for Excel Tables + data refresh (Import Data)
- Refactor of EditSessionInfo's method HasSameWorkbookAndTable to be promoted to a more general implementation using ISessionInfo interface as input parameter instead.
- Creation of ISessionInfo interface to generalize the ground between Edit and Import session objects.
- Implementation of the ISessionInfo interface by the EditSessionInfo class.
- Return type of CreateExcelTable extension method changed from void to string, returning the name of the Excel Object being created.
- Creation of ImportSessionInfo class.
- Some extra parameters are required at both ImportDataAtGivenExcelCell() method overloads.
- MySqlDataTable creates new ImportSessionInfo objects when needed and appends them to its correspondant ThisAddin collection.
- RejectChanges() call was extracted from RefreshData() method at MySqlDataTable class and incorporated into RevertDataChanges() at EditDataDialog class.
- New handles were added to the Application_SheetBeforeRightClick event at ThisAddin class.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 1.3.0
+- Added new feature to allow imported data to be refreshed directly from the data base.
 - New feature that allows the user to reset option settings in Import, Export or Append advanced options and Global Options dialogues to their respective default values was added.
 - Added new feature to allow the selection of multiple tables and views and an Import Multiple Tables and Views action that when clicked imports the data of all selected
   database objects into individual Excel worksheets, Excel tables are created optionally for each imported Table or View. On Excel 2013 (and higher) PowerPivot model
