--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.0
+- Added new feature to create Excel PivotTables for imported data if specified by the users, the feature is present on all import operations (Tables, Views, Procedures).
+  The PivotTables are created next to the imported data so users can customize the PivotTable to suit their needs.
 - Added new feature to allow imported data to be refreshed directly from the data base.
 - New feature that allows the user to reset option settings in Import, Export or Append advanced options and Global Options dialogues to their respective default values was added.
 - Added new feature to allow the selection of multiple tables and views and an Import Multiple Tables and Views action that when clicked imports the data of all selected
