Feature #990 - Collation options for new schemas and tables
- Added the GetCollationsDictionary static method to the MySqlDataUtilities class to assemble a dictionary with character sets and their collations used to populate comboboxes.  Added the GetCreateSchemaSql method to assemble SQL statements used to create a new schema with options for its character set and collation and to optionally grant permissions to the user. (source/Classes/MySQLDataUtilities.cs)
- Added the CharSet and Collation properties to the MySqlDataTable class to identify customized collations for a new table. Modified the GetNewTableSql method to factor in the character set and collation on the CREATE TABLE SQL statement generated on an Export Data operation. (source/Classes/MySQLDataTable.cs)
- Added the CollationComboBox control to the ExportDataForm and NewSchemaDialog classes to let users pick a character set and collation for a new table or new schema. (source/Forms/ExportDataForm.cs, source/Forms/ExportDataForm.Designer.cs, source/Forms/ExportDataForm.resx, source/Forms/NewSchemaDialog.cs, source/Forms/NewSchemaDialog.Designer.cs, source/Forms/NewSchemaDialog.resx)
- Added the SetupCollations method to initialize the contents of a ComboBox control with character sets and their corresponding collations. (source /Classes/MiscUtilities.cs)
- Added constants and enumerations for the CreateSchema and GrantAll statement types. (source/Classes/MySqlStatement.cs)
- Fixed minor bug on MySqlScriptDialog class present when using the dialog without a MySqlDataTable but rather with a SQL script. (source/Forms/MySqlScriptDialog.cs)
- Moved some logic for schema creation from the SchemaSelectionPanel to the NewSchemaDialog class. (source/Panels/SchemaSelectionPanel.cs, source/Forms/NewSchemaDialog.cs)
- Added resource strings for messages shown during the schema creation operation. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.0
+- Added new feature to allow the specification of character set and collation options for new schemas created through the Create New Schema action label and for new
+  tables created through the Export Excel Data to New Table action label.  By default schemas are created using the server default character set and collation, and tables
+  are created using the schema ones just as previous Excel versions worked.
 - Added new feature to create Excel PivotTables for imported data if specified by the users, the feature is present on all import operations (Tables, Views, Procedures).
   The PivotTables are created next to the imported data so users can customize the PivotTable to suit their needs.
 - Added new feature to allow imported data to be refreshed directly from the data base.
