--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 1.3.0
+- Added new feature to include a row with summary fields to individually selected tables imported to Excel tables.
 - Added new feature to allow the specification of character set and collation options for new schemas created through the Create New Schema action label and for new
   tables created through the Export Excel Data to New Table action label.  By default schemas are created using the server default character set and collation, and tables
   are created using the schema ones just as previous Excel versions worked.
