Feature #703 - Show all available data types (Export Data)
- Created the MySqlDataType class to represent permitted MySQL data types used in MySQL for Excel, it contains properties describing the behavior of a data type such as Display to know if the data type is to be shown to users as an available type, Name, Description, IsCommon to know if the data type is a widely used type shown in previous versions of MySQL for Excel, IsBaseType to know if the data type is a base MySQL type or a derived one (like Varchar(255)), and ParametersCount to know how many attributes within parenthesis can the data type have. The class also contains static properties to return lists of display types, base types and all types that are calculated just once and reused throughout the lifespan of the add-in.(source/Classes/MySqlDataType.cs, source/MySQL.ForExcel.csproj)
- Added the ExportShowAllMySqlDataTypes boolean setting with a default value of false. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings, source/app.config)
- Added a checkbox called "Show all available MySQL data types in the Data Type drop-down list" to the ExportAdvancedOptionsDialog class to save its value in the ExportShowAllMySqlDataTypes setting. (source/Forms/ExportAdvancedOptionsDialog.cs, source/Forms/ExportAdvancedOptionsDialog.Designer.cs, source/Forms/ExportAdvancedOptionsDialog.resx)
- Added code to the ExportDataForm class to fill the Data Type combo box with either common MySQL data types or with all display ones depending on the value of the ExportShowAllMySqlDataTypes setting, also modified the events tied to the Data Type combo box to interact with its new DataSource. (source/Forms/ExportDataForm.cs, source/Forms/ExportDataForm.Designer.cs, source/Forms/ExportDataForm.resx)
- Modified the GetMySqlDataTypeMaxLength, Type1FitsIntoType2 and StringValueCanBeStoredWithMySqlType to accomodate for spatial data types now dimmed as permitted data types. Modified the ValidateUserDataType 

--- a/source/Forms/ExportAdvancedOptionsDialog.resx
+++ b/source/Forms/ExportAdvancedOptionsDialog.resx
@@ -117,17 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="FootnoteAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ContentAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CreateTableIndexesLastCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ShowAllDataTypesCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="HelpToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <data name="ShowAllDataTypesCheckBox.ToolTip" xml:space="preserve">
+    <value>When checked all the allowed MySQL data types will be shown in the Data Type drop-down list.
+When unchecked only a subset with the most commonly used data types is shown (default).
+The Data Type combo box allows for manual entry of a MySQL data type in either case.
+</value>
+  </data>
+  <metadata name="CreateTableIndexesLastCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <data name="CreateTableIndexesLastCheckBox.ToolTip" xml:space="preserve">
     <value>When checked the unique and regular indexes will be created in the new MySQL table after all rows have been inserted.
@@ -182,9 +185,6 @@ When unchecked the length is not round up and the maximum length detected on the
     <value>True</value>
   </metadata>
   <metadata name="ColumnDatatypeOptionsLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CommandAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="ResetToDefaultsButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
