--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 1.3.0
+- Added new feature to optionally display all allowed MySQL data types in the Export Data dialog's Data Type combo box versus only the basic and mostly used data types that
 - Added new feature to include a row with summary fields to individually selected tables imported to Excel tables.
+  have been shown in previous versions of MySQL for Excel. The Data Type combo box has always allowed the manual entry of any allowed MySQL data type in case the drop-down
+  list does not contain the data type needed by the users. With this new feature users will be able to see within the drop-down list all available MySQL data types.
 - Added new feature to allow the specification of character set and collation options for new schemas created through the Create New Schema action label and for new
   tables created through the Export Excel Data to New Table action label.  By default schemas are created using the server default character set and collation, and tables
   are created using the schema ones just as previous Excel versions worked.
