--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -932,10 +932,10 @@ importing the MySQL {0} data in Excel.</value>
     <value>..\Resources\select_none.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ImportMultipleRelationshipsNotSupportedExcelVersionWarningText" xml:space="preserve">
-    <value>Relationships are not supported in Excel versions lower than 2013 so relationships will not be created.</value>
+    <value>Excel Model Relationships are not supported in Excel versions lower than 2013.</value>
   </data>
   <data name="ImportMultipleRelationshipsNotSupportedNoExcelTablesWarningText" xml:space="preserve">
-    <value>Option to create Excel tables is turned off so relationships can't be created.</value>
+    <value>The advanced option to create Excel tables for imported data is turned off so relationships cannot be created.</value>
   </data>
   <data name="ScriptCreatingSchemaText" xml:space="preserve">
     <value>Creating Schema '{0}'</value>
@@ -960,5 +960,8 @@ importing the MySQL {0} data in Excel.</value>
   </data>
   <data name="NewSchemaOperationSuccessSummaryText" xml:space="preserve">
     <value />
+  </data>
+  <data name="ImportMultipleRelationshipsNotSupportedTitleText" xml:space="preserve">
+    <value>Excel Relationships cannot be created.</value>
   </data>
 </root>
