--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.0
+- Added new feature to allow the selection of multiple tables and views in the Database Objects panel, the multiple selection can be done by using the CTRL or SHIFT keys
+  along with arrow keys, paging keys or mouse clicks. Clicking CTRL+A selects all tables and views in the panel. A new Import Multiple Tables and Views action appears with
+  a multiple selection of DB objects, when clicked the data of all selected DB objects is imported into individual Excel worksheets, Excel tables are created optionally
+  for each imported Table or View. On Excel 2013 (and higher) PowerPivot model relationships are created based on MySQL relationships defined with foreign key constraints.
 - Added new feature to optionally display all allowed MySQL data types in the Export Data dialog's Data Type combo box versus only the basic and mostly used data types that
   have been shown in previous versions of MySQL for Excel.
 - Added new feature to include a row with summary fields for imported MySQL data, the feature is present on all Import Data dialogues (for Tables, Views and Procedures).
@@ -10,9 +14,6 @@
 - Added new feature to allow Excel tables created from imported MySQL data to be refreshed using Excel's Refresh commands. Saving an Excel Workbook where Excel tables
   were created from imported MySQL data will retain the connection properties so the data can be refreshed after closing and reopening the Workbook later.
 - Added new feature that allows the user to reset option settings in Import, Export or Append advanced options and Global Options dialogues to their respective default values.
-- Added new feature to allow the selection of multiple tables and views and an Import Multiple Tables and Views action that when clicked imports the data of all selected
-  database objects into individual Excel worksheets, Excel tables are created optionally for each imported Table or View. On Excel 2013 (and higher) PowerPivot model
-  relationships are created based on MySQL relationships defined with foreign key constraints.
 
 1.2.1
 - Fixed a bug that happened after closing an Excel window containing an open MySQL for Excel add-in in Excel 2013, the custom task pane linked to the closed window was
