--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -964,4 +964,7 @@ importing the MySQL {0} data in Excel.</value>
   <data name="ImportMultipleRelationshipsNotSupportedTitleText" xml:space="preserve">
     <value>Excel Relationships cannot be created.</value>
   </data>
+  <data name="SelectedRelatedTablesAndViewsText" xml:space="preserve">
+    <value>Selected related Tables and Views: </value>
+  </data>
 </root>
