Work Item #1317 - Reverting back the native Excel's refresh data behavior sometimes throws a COM Exception
- Created the RevertNativeRefreshFunctionality method which handles it code inside a try-catch block due to a COM Exception sometimes thrown during the add-in's shutdown.  Created as well its counterpart OverrideNativeRefreshFunctionality also handling its code within a try-catch block. (source/ThisAddIn.cs)
- Added resource strings for the methods added above in case an error needs to be logged, removed a resource string no longer in use. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -967,4 +967,10 @@ importing the MySQL {0} data in Excel.</value>
   <data name="SelectedRelatedTablesAndViewsText" xml:space="preserve">
     <value>Selected related Tables and Views: </value>
   </data>
+  <data name="OverrideNativeRefreshError" xml:space="preserve">
+    <value>Native Excel's refresh functionality could not be overriden due to an error.</value>
+  </data>
+  <data name="RevertNativeRefreshError" xml:space="preserve">
+    <value>Native Excel's refresh functionality could not be reverted back due to an error.</value>
+  </data>
 </root>
