Bug #18962670 - IMPORTING SAME TABLE TWICE FAILS AFTER DELETING EXCEL TABLE LINKED TO THE FIRST
- Moved the CreateExcelTable method from the MySqlDataTable class to the ImportSessionInfo one in order to encapsulate that functionality within the import session, now the MySqlDataTable only cares about creating the import session when importing data. (source/Classes/MySqlDataTable.cs, source/Classes/ImportSessionInfo.cs)
- Modified code in the CreateExcelTable method to change the way connections are created for Excel 2013, instead of creating a connection for an Excel command type we create a default command type one (like we do for Excel 2007 and 2010). Changed the constructor of the ImportSessionInfo class to call the CreateExcelTable method at the end of it. Created the RemoveWorkbookConnetion method to remove the workbook connection created for the import session, the method is now called within the Dispose method. (source/Classes/ImportSessionInfo.cs)
- Added the DisconnectAndDelete extension method for ExcelTools.ListObject objects, which attempts to disconnect an Excel table and dispose of it, its related MySqlDataTable and its related ExcelInterop.ListObject. Added the GetCommandText and GetConnectionName methods to generate a command text and a connection name for new WorkbookConnection instances from a Workbook and a ListObject name. (source/Classes/ExcelUtilities.cs)
- Added the ParentWorkbookNullError resource string. (source/Properties/Resources.resx, source/Properties/Resources.Designer.cs)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -973,4 +973,7 @@ importing the MySQL {0} data in Excel.</value>
   <data name="RevertNativeRefreshError" xml:space="preserve">
     <value>Native Excel's refresh functionality could not be reverted back due to an error.</value>
   </data>
+  <data name="ParentWorkbookNullError" xml:space="preserve">
+    <value>The parent workbook of worksheet {0} could not be obtained while trying to create the Excel table {1}.</value>
+  </data>
 </root>
