--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.1
+- Changed the way connections are created for Excel 2013, instead of creating a connection for an Excel command type we create a default command type one (like we do for
+  Excel 2007 and 2010) which fixes this particular bug. (Bug #18962670 - IMPORTING SAME TABLE TWICE FAILS AFTER DELETING EXCEL TABLE LINKED TO THE FIRST)
 - Added new functionality to the Data Type combo box for Enum and Set types. When all data types are being shown in the Export Data dialog (via advanced option), if the
   user selects Enum or Set, the list of valid values for the type declaration is assembled automatically from the column's data so there is no need to type the list of
   values that goes between parenthesis manually.
