--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.1
+- Fixed new comparison method to detect the correspondent session's ListObjects by GUID, while also deleting invalid leftover objects.
+  (Bug #18961806 - FIX REFRESH PROBLEM WHEN USERS CHANGE EXCEL TABLE NAMES OF IMPORTED MYSQL DATA)
 - Removed the Line and LinearRing types from the list of valid data types supported by the MySQL server, meaning the types do not appear anymore in the Data Type combo
   box located in the Export Data form and are not treated as valid if typed-in by the user. Line and LineaRing are not a part of the SFA-SQL nor SQL/MM-Spatial standards,
   thus not implemented in the MySQL Server. (Bug #18962184 - DATA TYPE COMBO BOX IN EXPORT DATA DIALOG SHOWING 2 NON-WORKING SPATIAL TYPES)
