Bug #18962617 - IMPORT DOES NOT RETRIEVE DATA AT LEFT COLUMNS FROM A PREVIOUS IMPORT
- Enhanced the Refresh method to resize the ToolsListObject before binding it, adding smart logic to insert new rows or columns if needed to make room for the new ToolsListObject size. This code works-around a bug (or limitation) in Excel VSTO, since the fix needs to be done even when there is enough room for a ListObject in the Excel worksheet.  More information about that limitation in http://social.msdn.microsoft.com/Forums/vstudio/en-US/a8dd0bbd-7e2a-4ba3-8f8a-dd4c22c8e5f6/2-listobject-into-same-sheet?forum=vsto. Added code to the CreateExcelTable method to show errors to the users related to the ListObjects creation. (source/Classes/ImportSessionInfo.cs)
- Added code to the CreatePivotTable method to show errors to the users related to the PivotTables creation. Added the GetChartObjects extension method to return a collection of ChartObjects in the given Worksheet. Created the GetIntersectingRangeWithAnyExcelObject extension method to check if a given Excel.Range intersects with ListObject, PivotTable or ChartObject objects in the given range's worksheet; if an intersection is found only the intersecting range is returned. Modified the IntersectsWithAnyExcelObject method to make use of the new GetIntersectingRangeWithAnyExcelObject one. (source/Classes/ExcelUtilities.cs)
- Changed the wording in the dialog displayed to users when doing an Import Data operation and the imported data range would collide with other ListObject, PivotTable or ChartObject objects in the Excel worksheet where data is imported to. The wording now reflects that a collision was found with another Excel object where before it referred a collision with another Excel table. (source/Classes/MySQLDataTable.cs, source/Properties/Resources.Designer.cs, source/Properties/Resources.Designer.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.1
+- Enhanced the code that refreshes an Excel table to smartly resize it before binding it according to the new size of its data source. If the new size is bigger than
+  before, new columns or rows will be inserted to make room for the new Excel table size. Added code to show errors to the user upon Excel tables or PivotTables creation.
+  (Bug #18962617 - IMPORT DOES NOT RETRIEVE DATA AT LEFT COLUMNS FROM A PREVIOUS IMPORT)
 - Fixed an issue with Edit Connections in the Welcome Panel, where the selected connection information was not being populated in the Edit Connection Dialog.
   (Bug #18968777 - EDIT EXISTING CONNECTIONS IS BROKEN)
 - Fixed the formula applied in the temporary Excel range used to feed the export data for a new MySQL table, the formula now considers the value of the option "First row
